--- a/app/css/app.css
+++ b/app/css/app.css
@@ -58,7 +58,7 @@ ul.comic-thumbs li {
   border: 1px solid black;
   display: inline-block;
   margin: 1em;
-  background-color: blue;
+  background-color: white;
 }
 
 ul.comic-thumbs img {
