added to master branch

--- a/app/partials/comic-detail.html
+++ b/app/partials/comic-detail.html
@@ -14,5 +14,6 @@ Hi<br>
 <ul class="specs">
     <li>
         <span>Availability and Networks</span>
+        <span>{{comic.mydate}}</span>
     </li>
 </ul>
