--- a/app/partials/comic-detail.html
+++ b/app/partials/comic-detail.html
@@ -1,5 +1,7 @@
 <!--<img  ng-src="{{comic.images[0]}}" >-->
-<img  ng-src="{{mainImageUrl}}" >
+<div >
+    <img  ng-src="{{mainImageUrl}}" style="max-width: 400px;max-height: 400px">
+</div>
 
 <h1>{{comic.name}}</h1>
 
