--- a/app/css/app.css
+++ b/app/css/app.css
@@ -14,6 +14,14 @@ body {
   float: left;
 }
 
+.comic-large {
+  background-color: white;
+  width: 33%;
+  overflow: hidden;
+  position: relative;
+  float: left;
+}
+
 .comics {
   list-style: none;
 }
@@ -64,7 +72,7 @@ ul.comic-thumbs li {
 ul.comic-thumbs img {
   height: 100px;
   width: 300px;
-  padding: 1em;
+  padding: 1px;
 }
 
 ul.comic-thumbs img:hover {
