playing with Provider- not doing what i want yet

--- a/app/partials/comic-detail.html
+++ b/app/partials/comic-detail.html
@@ -21,11 +21,10 @@
         <span>{{comic.mydate}}</span>
     </li>
 </ul>
-<ul class="lists" ng-controller="SomeDetailCtrl as comList">
-    <li>
-        Where am I<br>
-    </li>
+<ul class="lists comic-thumbs" ng-controller="SomeDetailCtrl as comList">
     <li ng-repeat="nkey in comList.comicStrips">
-        <span>{{nkey}}</span>
+        <!--<span>{{nkey}}</span>-->
+        <img ng-src="{{nkey}}" ng-click="setImage(img)">
+
     </li>
 </ul>
