--- a/app/partials/comic-detail.html
+++ b/app/partials/comic-detail.html
@@ -21,10 +21,4 @@
         <span>{{comic.mydate}}</span>
     </li>
 </ul>
-<ul class="lists comic-thumbs" ng-controller="SomeDetailCtrl as comList">
-    <li ng-repeat="nkey in comList.comicStrips">
-        <!--<span>{{nkey}}</span>-->
-        <img ng-src="{{nkey}}" ng-click="setImage(img)">
-
-    </li>
-</ul>
+<test-directive></test-directive>
