--- a/app/partials/comic-detail.html
+++ b/app/partials/comic-detail.html
@@ -21,4 +21,16 @@
         <span>{{comic.mydate}}</span>
     </li>
 </ul>
+
 <test-directive></test-directive>
+<!--<div ng-controller="SomeDetailCtrl as comList">-->
+    <!--<div>-->
+        <!--<img ng-src="{{comList.mainImageUrl}}" style="max-width: 400px;max-height: 400px">-->
+    <!--</div>-->
+    <!--<ul class="comic-thumbs" >-->
+        <!--<li ng-repeat="nkey in comList.comicStrips" class="ng-binding ng-scope">-->
+            <!--&lt;!&ndash;<span>{{nkey}}</span>&ndash;&gt;-->
+            <!--<img ng-src="{{nkey}}" ng-click="setMainImage('{{nkey}}')">-->
+        <!--</li>-->
+    <!--</ul>-->
+<!--</div>-->
