--- a/app/partials/comic-detail.html
+++ b/app/partials/comic-detail.html
@@ -22,7 +22,8 @@
     </li>
 </ul>
 
-<test-directive></test-directive>
+<try-this-directive></try-this-directive>
+<!--<test-directive></test-directive>-->
 <!--<div ng-controller="SomeDetailCtrl as comList">-->
     <!--<div>-->
         <!--<img ng-src="{{comList.mainImageUrl}}" style="max-width: 400px;max-height: 400px">-->
