added a PageExpanded directory

--- a/app/partials/comic-detail.html
+++ b/app/partials/comic-detail.html
@@ -1,4 +1,3 @@
-<!--<img  ng-src="{{comic.images[0]}}" >-->
 <div >
     <img  ng-src="{{mainImageUrl}}" style="max-width: 400px;max-height: 400px">
 </div>
@@ -22,8 +21,8 @@
     </li>
 </ul>
 
-<try-this-directive></try-this-directive>
-<!--<test-directive></test-directive>-->
+<!--<try-this-directive></try-this-directive>-->
+<test-directive></test-directive>
 <!--<div ng-controller="SomeDetailCtrl as comList">-->
     <!--<div>-->
         <!--<img ng-src="{{comList.mainImageUrl}}" style="max-width: 400px;max-height: 400px">-->
