added more images and expanded directive

--- a/app/partials/comic-detail.html
+++ b/app/partials/comic-detail.html
@@ -14,12 +14,12 @@
     </li>
 </ul>
 
-<ul class="specs">
-    <li>
-        <span>Availability and Networks</span>
-        <span>{{comic.mydate}}</span>
-    </li>
-</ul>
+<!--<ul class="specs">-->
+    <!--<li>-->
+        <!--<span>Availability and Networks</span>-->
+        <!--<span>{{comic.mydate}}</span>-->
+    <!--</li>-->
+<!--</ul>-->
 
 <!--<try-this-directive></try-this-directive>-->
 <test-directive></test-directive>
