--- a/app/partials/comic-list.html
+++ b/app/partials/comic-list.html
@@ -24,7 +24,7 @@
                 <li ng-repeat="comic in comics | filter:query | orderBy:orderProp">
                     <!--<a href="#/comics/{{comic.ComicCode}}" class="thumb"><img class="thumb" ng-src="{{comic.imgDirectoryLocation}}/{{comic.ComicName}}/{{comic.imgCode}}20151226.jpg"></a>-->
                     <a href="#/comics/expanded/{{comic.ComicCode}}">{{comic.ComicName}}</a>
-                    <a href="#/comics/{{comic.ComicCode}}" >
+                    <a href="#/comics/{{comic.ComicName}}/{{comic.ComicCode}}" >
                         <img  ng-src="{{comic.imgDirectoryLocation}}/{{comic.ComicName}}/{{comic.imgCode}}20160122.jpg">
                         <!--<img  src="../../testComicStrips/Luann/luann20160120.jpg">-->
                     </a>
